# cihat_dev_site

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  Modelfile  README.md  aws_user_data.sh  codex.patch  docker-compose-cihatdev.yml  docker-compose-postgres.yml  docker-compose-traefik.yml  docker-compose.yml  manage.py  pyproject.toml  r.txt  requirements.txt  test.sh  traefik.yml
.github/workflows/: build_for_docker_hub.yml
api/: serializers.py  urls.py  views.py
base/: admin.py  apps.py  forms.py  middlewares.py  models.py  sitemaps.py  storages.py  urls.py  utils.py  views.py
base/migrations/: 0001_initial.py  0002_alter_works_snapshot.py  0003_alter_works_snapshot_alt.py  0004_work_rename_skills_skill_delete_works.py  0005_alter_work_snapshot.py  0006_spamfilter.py  0007_delete_spamfilter.py  0008_create_ratelimit_cache.py
base/tests/: test_admin.py  test_apps.py  test_forms.py  test_middlewares.py  test_models.py  test_security.py  test_settings.py  test_sitemaps.py  test_storages.py  test_urls.py  test_utils.py  test_views.py
blog/: admin.py  models.py  paginations.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_difficulty_post_time.py  0003_post_slug_alter_post_difficulty.py  0004_alter_post_owner.py  0005_alter_post_owner.py  0006_alter_post_owner.py  0007_remove_post_slug_post_title_slug.py  0008_alter_post_title_slug.py  0009_alter_post_title_slug.py  (+19 more)
cihat_dev/: asgi.py  settings.py  test_setting.py  test_settings.py  urls.py  wsgi.py
environments/: cihatdev_environment.txt
templates/: robots.txt
(+4 files in other folders)
