[project]
name = "cihat-dev-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.44",
    "django>=6.0.2",
    "django-cleanup>=9.0.0",
    "django-extensions>=4.1",
    "django-ratelimit>=4.1.0",
    "django-storages[s3]>=1.14.6",
    "gunicorn>=25.0.2",
    "pillow>=12.1.0",
    "psycopg[binary,pool]>=3.3.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
